--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,19 @@ requires-python = ">=3.12"
 dependencies = [
     "aiofiles>=25.1.0",
     "beautifulsoup4>=4.14.2",
-    "dspy-ai>=3.0.4",
+    "black>=23.0.0",
+    "dspy-ai>=2.5.0",
     "fastapi>=0.121.2",
     "fastmcp>=2.13.1",
     "html2text>=2025.4.15",
     "httpx>=0.28.1",
+    "mypy>=1.5.0",
     "pydantic>=2.12.4",
+    "pydantic-settings>=2.0.0",
+    "pyright>=1.1.0",
     "pytest>=9.0.1",
     "pytest-asyncio>=1.3.0",
+    "pytest-timeout>=2.1.0",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.20",
     "python-socketio>=5.14.3",
