--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,11 @@ pytest>=9.0.1
 pytest-asyncio>=1.3.0
 pytest-timeout>=2.1.0
 
-# Development
+# Development and Code Quality
 ruff>=0.14.4
 black>=23.0.0
 mypy>=1.5.0
+pyright>=1.1.0
 
 # Note: Deno must be installed system-wide for POT code execution
 # Install: curl -fsSL https://deno.land/install.sh | sh
