--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ ruff>=0.14.4
 black>=23.0.0
 mypy>=1.5.0
 pyright>=1.1.0
+vulture>=2.11  # Dead code detection
 
 # Note: Deno must be installed system-wide for POT code execution
 # Install: curl -fsSL https://deno.land/install.sh | sh
