--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastmcp>=2.13.1",
     "html2text>=2025.4.15",
     "httpx>=0.28.1",
+    "mem0ai>=1.0.1",
     "mypy>=1.5.0",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.0.0",
@@ -26,5 +27,6 @@ dependencies = [
     "requests>=2.32.5",
     "ruff>=0.14.4",
     "uvloop>=0.22.1",
+    "vulture>=2.11",
     "websockets>=15.0.1",
 ]
