--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ httpx>=0.28.1
 aiofiles>=25.1.0
 requests>=2.32.5
 
+mem0ai>=1.0.1
+
 # Web scraping (for documentation fetcher)
 beautifulsoup4>=4.14.2
 html2text>=2025.4.15
