--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,7 @@
 
   // Keep unlimited editors open
   "workbench.editor.enablePreview": false,
-  "workbench.editor.limit.enabled": true,
+  "workbench.editor.limit.enabled": false,
   "workbench.editor.limit.perEditorGroup": false,
   "workbench.editor.limit.value": 1000,
 
